# artifact-watchdog

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dogfood.yml  fresh-user-quickstart.yml
docs/: DOGFOODING.md  FAILURE_LAB.md  GITHUB_ACTIONS_ARTIFACT_CHECKS.md  INTEGRATION_TEMPLATES.md  RELEASING.md  ROADMAP.md  codex-for-oss-application-draft.md  form-submit-packet.md  fullharness.md  submission-readiness.md
examples/: artifact-watchdog.toml  cron-daily.sh  github-actions.yml
examples/demo-workspace/: README.md  watchdog.toml
examples/demo-workspace/state/: docs-build.json  metrics-rollup.json  nightly-import.json  release-notes.json
examples/dogfood/: artifact-watchdog.toml
examples/failure-lab/: artifact-watchdog.toml
examples/integrations/: README.md
examples/integrations/cron/: artifact-watchdog-cron.sh  artifact-watchdog.toml
examples/integrations/github-actions/: artifact-watchdog.toml  artifact-watchdog.yml
examples/integrations/local-agent-report/: artifact-watchdog.toml  run-agent-report-check.sh
examples/integrations/release-notes/: artifact-watchdog.toml  (+1 more)
scripts/: dogfood_artifacts.sh  failure_lab.py  quickstart_smoke.sh  template_pack_smoke.sh
src/artifact_watchdog/: __init__.py  _compat.py  cli.py  config.py  core.py  report.py
tests/: test_cli.py  test_core.py  test_dogfood.py  test_examples.py  test_failure_lab.py  test_python_requirement_docs.py
(+4 files in other folders)
