[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "artifact-watchdog"
version = "0.1.0"
description = "Audit scheduled jobs by checking the artifacts they should have produced."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "artifact-watchdog contributors" }]
keywords = ["automation", "ci", "monitoring", "scheduler", "artifacts"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: System :: Monitoring",
]

[project.scripts]
artifact-watchdog = "artifact_watchdog.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
